deploy/compose/envoy-egress.yaml
static_resources:
  listeners:
    - name: egress_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: egress
                route_config:
                  name: deny_all
                  virtual_hosts:
                    - name: deny_all
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /
                          direct_response:
                            status: 403
                http_filters:
                  - name: envoy.filters.http.router
